anna edits to referee reports

--- a/abc_comprehensivecba_answerstoreferees.tex
+++ b/abc_comprehensivecba_answerstoreferees.tex
@@ -143,7 +143,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Editor. pg.\ 12, top. ``j'' usually means an index: could there be a better symbol instead ... ah, actually, you mean this to be an index! It is just written in a confusing way ... in particular, J does not ``index the outcomes'' (that could be a large index set!), but rather, indexes the component of the outcome. What is d? How does it relate to D or R (or something else) before? What is k,e,n? Strangely, e and n are defined at the bottom of pg.\ 16, but not here. Why not give a number of components j rather than talking about the set J? Shouldn't you tell the reader more about the list of outcomes which make up the vector Y? After all, later on, you seek to construct a synthetic cohort with similar outcomes ... so knowing what they are will be crucial latest then. This paragraph needs a dedicated rewrite.}
 
-\noindent \textit{Response.} We agree and actually came to the conclusion that the $j$ indexing was unnecessary. $j$ indexed one of many possible outcomes. We are now using a vector of outcomes to summarize our method and thus avoid indexing individual components of the outcomes.
+\noindent \textit{Response.} We agree and actually came to the conclusion that the $j$ indexing was unnecessary. $j$ indexed one of many possible outcomes. We are now using a vector to summarize our method and thus avoid indexing individual components of the outcomes.
 
 \noindent \textbf{Editor. pg.\ 13: As a poor graduate student reading your paper, I can't figure out what to do with table 1. Is this meant to summarize something that is elsewhere in the paper: perhaps a technical appendix? I gather that you are trying to construct life-cycle costs and benefits. The first column gives a list of items, that are rather cryptic: if it was just them, it would be better to use two paragraphs and explain them. For example, why are ``Health Costs'' listed twice? What does ``Victimization Inflation'' mean? I understand the next column, i.e. age. But the information in the remaining columns is, at best, a reference to something clarified elsewhere. It gives me at best a vague guide at how to attempt and reconstruct your numbers. It says that I should ``impute national victims-arrests ratio(s)'' and a lot of other stuff. Recommendation: I feel this table should be in the technical appendix. In the main body of the text instead provide an in-text list of the ``components'', i.e. the left-most column. Explain them briefly, where needed. Also, explain briefly the main idea or main hurdle or main innovation in calculating that component, if needed. If they are similar to your main ``intuitive'' labor income example, then say so. For each component, point to a precise location in the technical appendix, where you explain with sufficient clarity, exactly what you do, so that a graduate student can replicate your numbers exactly.}
 
@@ -167,11 +167,11 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Editor.  ``the two stages can be compressed''. Cool. But we don't care whether this can be done: we care only whether you actually do this. Do you? And if so, exactly how? Details should be provided in the technical appendix.}
 
-\noindent \textit{Response.} We more concisely state why would this be useful and what it implies. We show that this method is in agreement with our model-based method. We present results using this alternative in addition to our main model-based method. Instead of following the steps presented in Section~\ref{section:cbamethodology}, an alternative is simply to use matching on $\bm{B}^d_k$ and $\bm{X}_{k,a}$ to form average profiles of treatment-groups alikes and control-group alikes (and take the respective mean difference between these two groups). This is just non-parametric matching. Doing this gives a useful check on our method because, under exogeneity, it compresses our procedure to a simple and intuitive estimator that relies on the same key assumptions as our model-based approach, without directly estimating the technology. Spelling out our method is useful. It is a method that some readers will be familiar with, and will find appealing given the robustness of our results to using it. We discuss it succinctly in the text but in greater detail in Appendix~\ref{appendix:methodology}. Agreement in the estimates from the two methods is a confirmation of exogeneity of $\bm{X}^d_{k,a}$ and the validity of the functional forms used in our model-based approach.
+\noindent \textit{Response.} We more concisely state why would this be useful and what it implies. We show that this method is in agreement with our model-based method. We present results using this alternative in addition to our main model-based method. Instead of following the steps presented in Section~\ref{section:cbamethodology}, an alternative is simply to use matching on $\bm{B}^d_k$ and $\bm{X}_{k,a}$ to form average profiles of treatment-group-alikes and control-group-alikes (and take the respective mean difference between these two groups). This is just non-parametric matching. Doing this gives a useful check on our method because, under exogeneity, it compresses our procedure to a simple and intuitive estimator that relies on the same key assumptions as our model-based approach, without directly estimating the technology. Spelling out our method is useful. It is a method that some readers will be familiar with, and will find appealing given the robustness of our results to using it. We discuss it succinctly in the text but in greater detail in Appendix~\ref{appendix:methodology}. Agreement in the estimates from the two methods is a confirmation of exogeneity of $\bm{X}^d_{k,a}$ and the validity of the functional forms used in our model-based approach.
 
 \noindent \textbf{Editor. pg.\ 16, ``There is close agreement of the constructed profiles within the age group of the experimental sample.'' See my main comment 3: if the constructed profile is obtained per matching the profile within the age group of the experimental sample, isn't this then a tautological statement? The same holds for the next paragraph. I.e., what, precisely, is used for construction, and what is the independent verification here? This is very unclear.}
 
-\noindent \textit{Response.} The explanation that we gave in our submitted paper failed to communicate why the fact that the constructed profiles match is important. To explain this, we refer to the recipe that we provide in Section~\ref{section:cbamethodology}. The first matching procedure (on $\bm{B}$) generates samples that resemble our treatment and control groups at baseline. This is how we construct synthetic cohorts. They are people sampled from the same set $\mathcal{B}_0$. Later in the paper, we also use a matching procedure using baseline variable and the $\bm{X}_{k,a}^d$ to make nonparametric forecasts. The reason why Figure~\ref{figure:controltests} is compelling is because in the auxiliary sample there is no treatment at all (everyone who satisfies $\bm{B} \in \mathcal{B}_0$ has some counterpart in the control sample). Thus, our forecast for the average profile for the control group should be the same as the average profile for people who satisfy $\bm{B} \in \mathcal{B}_0$ in the auxiliary sample. We now state this more clearly in Section~\ref{section:cbamethodology}.
+\noindent \textit{Response.} The explanation that we gave in our submitted paper failed to communicate why the fact that the constructed profiles match is important. To explain this, we refer to the recipe that we provide in Section~\ref{section:cbamethodology}. The first matching procedure (on $\bm{B}$) generates samples that resemble our treatment and control groups at baseline. This is how we construct synthetic cohorts. They are people sampled from the same set $\mathcal{B}_0$. Later in the paper, we also use a matching procedure using baseline variable and the $\bm{X}_{k,a}^d$ to make nonparametric forecasts. The reason why Figure~\ref{figure:controltests} is compelling is because in the auxiliary sample there is no treatment at all (everyone who satisfies $\bm{B} \in \mathcal{B}_0$ has some counterpart in the control sample). Thus, our forecast of the average profile for the control group should be the same as the average profile for people who satisfy $\bm{B} \in \mathcal{B}_0$ in the auxiliary sample. We now state this more clearly in Section~\ref{section:cbamethodology}.
 
 \noindent \textbf{Editor. On pg.\ 20 and just above Assumption~\ref{ass:summary}, Y now suddenly has five subscripts, when it only had three before, and the common subscripts are in a different order. I find that confusing. You then get to equation (3), and now there are four subscripts. This is not a compromise: this is even more confusing.}
 
@@ -179,7 +179,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Editor.  pg.\ 24: Assumption A-4 feels a bit odd. The notation is general enough that both d and k could be components of x. If one had a phi, which did not depend on it, then one could construct a new one, which did, switching between the ``old'' values, in dependence on d and k, and proceed with that. Is Theorem 1 then still valid? Perhaps something else is meant.}
 
-\noindent \textit{Response.} We  clarify this point in the paper. It is at the heart of our methodology. What we mean is that outcomes in both the experimental and non-experimental samples can be summarized by $\bm{X}_{k,a}^d$ and $\bm{B}_k$. That is, the realization of an outcome of interest is generated by realizations of $\bm{X}_{k,a}^d$ and $\bm{B}_k$. That is why it is crucial for us to document that treatment operates on $\bm{X}_{k,a}^d$ and that $\bm{\phi} \left( \cdot, \bm{B}_k \right)$ is a non-trivial function of $\bm{X}_{k,a}^d$, which we show to be empirically true in the analysis of Section~\ref{section:cbamethodology}. If $\bm{X}_{k,a}^d$ and $\bm{B}_k$ are the sole predictors of outcomes, then there is no $d$-specific $\bm{\phi}_{k,j}^d$ for $d=0,1$ and $k = e,n$ but one and only one \textit{invariant} $\phi$ applicable in both the experimental and non-experimental samples. We test and do not reject this hypothesis.
+\noindent \textit{Response.} We  clarify this point in the paper. It is at the heart of our methodology. What we mean is that outcomes in both the experimental and non-experimental samples can be summarized by $\bm{X}_{k,a}^d$ and $\bm{B}_k$. That is, the realization of an outcome of interest is generated by realizations of $\bm{X}_{k,a}^d$ and $\bm{B}_k$. That is why it is crucial for us to document that treatment operates on $\bm{X}_{k,a}^d$ and that $\bm{\phi} \left( \cdot, \bm{B}_k \right)$ is a non-trivial, policy-invariant function of $\bm{X}_{k,a}^d$, which we show to be empirically true in the analysis of Section~\ref{section:cbamethodology}. If $\bm{X}_{k,a}^d$ and $\bm{B}_k$ are the sole predictors of outcomes, then there is no $d$-specific $\bm{\phi}_{k,j}^d$ for $d=0,1$ and $k = e,n$ but one and only one \textit{invariant} $\phi$ applicable in both the experimental and non-experimental samples. We test and do not reject this hypothesis.
 
 \noindent \textbf{Editor. pg.\ 27: the notes to table 2 contain a model. That really should be part of the main text or appendix (or technical appendix): it feels odd to explain it there.}
 
