edits on health ready

--- a/Appendices/Health.tex
+++ b/Appendices/Health.tex
@@ -1,12 +1,6 @@
 \section{Health Outcomes in the Future Adult Model (FAM)} \label{appendix:health}
 
-\noindent \textbf{[JJH: The last battle zone!]}
-
-\noindent \textbf{[JLG: I have reworked this version, based on your comments and on my conversations with Bryan and Duncan. I have gotten rid of a lot of the extensive verbal introduction and many other verbal details that now have become schematic and clear with the presentation of what we estimate and the big tables that I generated.]}
-
-Our methodology to forecast and monetize health outcomes is a modified version of Section~\ref{section:cbamethodology}. When studying labor income, a first-order autoregressive model is a helpful device to simplify a complex reality and produce forecasts. As it turns out, in the paper we find that model to perform well under a variety of testable implications. 
-
-When studying health, a modified version is needed because there is abundant state interdependency in health outcomes. We use a dynamic microsimulation model (the Future Adult Model - FAM) as laboratory to estimate health-state occupancy probabilities and to predict other health and economic outcomes. With this in hand, we forecast the health trajectories of the ABC/CARE individuals. In Section~\ref{section:cbamethodology}, we initialize the forecast of labor income using labor income at age 21. In this appendix, we use a ABC/CARE rich age-30 interview and a health follow-up conducted when the subjects were in their mid-30s to initialize the forecast of the health trajectory. We then monetize health outcomes using quality-adjusted life years and medical costs.\footnote{This microsimulation model is an extension of the model used by \citet{Prados_etal_2015_How-Much-Can-Education}; the technical details are described in \citet{Goldman_etal_2015_Future-Adult-Model}. Both models are related to the Future Elderly Model (FEM), which is a microsimulation tool originally developed to examine the health and health care costs among the elderly Medicare population \citep{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}. It has been used extensively to assess health and disease prevention scenarios: FEM has been used to assess the future costs of disease, the benefits of preventing disease among older population, the consequences of new medical technologies, trends in disability, and the fiscal consequences of worsening population health (see \citet{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}, \citet{Lakdawalla_etal_2004_Health-and-Cost}, \citet{Goldman_etal_2005_HA}, and \citet{Zissimopoulos_etal_2014_Delaying-Alzheimers}). The main differences with FEM are that the model we use starts with cohorts of individuals at age 30 instead of 50, and that it simulates more outcomes than FEM, because they are important to explain health outcomes and medical expenditure at younger ages, like evolution of partnership and marital status, work status, and family size.}
+We forecast and monetize health outcomes using a modified version of the model of Section~\ref{section:cbamethodology}. When studying labor income, a first-order autoregressive model suffices to make valid forecasts. When forecasting health, a richer model is needed to make valid forecasts due to the dependency among health outcomes. We use a dynamic microsimulation model (the Future Adult Model - FAM) as a vehicle for forecasting health-state occupancy probabilities and associated benefits and costs costs. Using this tool, we forecast the health trajectories of the ABC/CARE individuals. In Section~\ref{section:cbamethodology}, we initialize the forecast of labor income using labor income at age 21. In this appendix, we use a comprehensive ABC/CARE rich age-30 health interview and a health follow-up conducted when the subjects were in their mid-30s to initialize the forecast of their health trajectories. We then monetize health outcomes using quality-adjusted life years and medical costs.\footnote{This microsimulation model is an extension of the model used by \citet{Prados_etal_2015_How-Much-Can-Education}. The technical details are described in \citet{Goldman_etal_2015_Future-Adult-Model}. Both models are related to the Future Elderly Model (FEM), which is a microsimulation tool originally developed to examine the health and health care costs among the elderly Medicare population \citep{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}. It has been used extensively to assess health and disease prevention scenarios: FEM has been used to assess the future costs of disease, the benefits of preventing disease among older population, the consequences of new medical technologies, trends in disability, and the fiscal consequences of worsening population health (see \citet{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}, \citet{Lakdawalla_etal_2004_Health-and-Cost}, \citet{Goldman_etal_2005_HA}, and \citet{Zissimopoulos_etal_2014_Delaying-Alzheimers}). The main differences of FAM with FEM are that the model we use starts with cohorts of individuals at age 30 instead of 50, and that it simulates more outcomes than FEM, because they are important to explain health outcomes and medical expenditure at younger ages. For example, we can analyze the evolution of partnership and marital status, work status, and family size.}
 
 \noindent Before providing formal details, we summarize the data sets used, as well as variable construction and imputation assumptions.
 
