--- a/Appendices/Health/data.tex
+++ b/Appendices/Health/data.tex
@@ -1,7 +1,7 @@
 \subsection{Data Sources} \label{section:data}
 
-\noindent FAM uses data from ABC/CARE follow-up surveys to set the initial state of the cohort.
-The transition model parameters are estimated from the 1997 to 2013 waves of the Panel Study of Income Dynamics (PSID).
+\noindent FAM uses data from ABC/CARE surveys to set the initial state of the cohort.
+The state-occupancy model parameters are estimated from the 1997 to 2013 waves of the Panel Study of Income Dynamics (PSID).
 We supplement the PSID with data from the Health and Retirement Study (HRS). We use the National Health and Nutrition Examination Survey (NHANES)
 to account for differences between measured and self-reported BMI.
 To estimate medical care costs associated with health conditions, we use the Medical Expenditures Panel Survey (MEPS) and the Medicare Current Beneficiaries Survey (MCBS).
@@ -13,20 +13,20 @@ To estimate medical care costs associated with health conditions, we use the Med
 
 \noindent The Panel Study of Income Dynamics (PSID) provides extensive information concerning demographics, economic outcomes, health care access, health outcomes, and health behaviors (such as smoking history, alcohol consumption, and exercise habits). Health outcome variables include diagnosis of diabetes, heart disease, hypertension, lung disease, and cancer, among others.
 
-\noindent We estimate the transition models using waves from 1997 to 2013. We create a dataset of respondents who have formed their own households, either
+\noindent We estimate state-occupancy models using waves from 1997 to 2013. We create a dataset of respondents who have formed their own households, either
 as single heads of households, cohabiting partners, or married partners. These heads, wives, and husbands respond to the richest
 set of PSID questions, including the health questions that are critical for our purposes. We use all respondents aged 25 and older.\footnote{While we use the full sample in our main analysis, we explored using a few different subsamples to better adapt to the demographics of the ABC/CARE subjects.}
-The length of the PSID is a significant advantage, because we can include past health behaviors as explanatory variables for current health outcomes. This dataset provides adequate sample sizes to explore health outcomes of specific groups.
+The length of the PSID panel dataset is a significant advantage, because we can use measures of past health behaviors to predict current health outcomes. This dataset provides adequate sample sizes to explore health outcomes of specific groups.
 PSID does not follow individuals who are institutionalized in nursing homes or other long-term care facilities. To overcome this weakness, we pool the PSID sample with the HRS sample when
 estimating mortality models.
 
 \subsubsection{HRS}
 
 \noindent The Health and Retirement Study (HRS) is a longitudinal panel that surveys a nationally representative sample of individuals over the age of 50 and their spouses every two years. When appropriately weighted, the HRS in 2010 is representative of U.S. households
-where at least one member is at least 51 years old.
+where at least one member is 51 years old.
 This study collects in-depth information about income, work, health, and medical expenditures. In our model, waves from 1998 to 2012 are pooled with the PSID for estimation of mortality and
 widowhood models. The HRS data
-are harmonized to the PSID for all relevant variables. Because the PSID does not follow respondents into nursing homes, we also use the HRS to estimate the model for nursing home residency. We use all cohorts in the dataset created by RAND (RAND HRS, version O) as the basis
+are harmonized with the PSID for all relevant variables. Because the PSID does not follow respondents into nursing homes, we also use the HRS to estimate the model for nursing home residency. We use all cohorts in the dataset created by RAND (RAND HRS, version O) as the basis
 for our analysis.
 
 \subsubsection{MCBS}
@@ -48,8 +48,8 @@ expenditures. MCBS data from 2007 to 2010 are used for estimating medical costs 
 \noindent The Medical Expenditure Panel Survey (MEPS), which began in 1996, is a set of large-scale surveys of families and individuals, their medical providers, and employers across the U.S. The Household Component (HC) of the MEPS provides data from
 individual households and their members, which is supplemented by data from their medical providers.
 The HC collects data from a representative subsample of households drawn from the
-previous year's National Health Interview Survey (NHIS). Since NHIS does not include the
-institutionalized population, neither does MEPS; this implies that we can only use the MEPS to
+previous year's National Health Interview Survey (NHIS). NHIS does not include the
+institutionalized population. Neither does MEPS. These restrictions imply that we can only use the MEPS to
 estimate medical costs for the non-elderly (ages 25--64) population. Information collected during household
 interviews include: demographic characteristics, health conditions, health status, use of medical
 services, sources of medical payments, and body weight and height. Each year the household survey
@@ -61,78 +61,75 @@ and utilization using data from 2008 to 2010. We use waves from 2001 to 2003 to 
 
 \subsubsection{NHANES}
 \noindent
-The National Health and Nutrition Examination Survey (NHANES) targets a nationally representative sample of approximately 5,000 individuals in each year since 1999. The data collected includes responses to interview questions about demographics, disease conditions, height, and weight, as well as physical measurement of BMI. We use NHANES years 2002 to 2010 to estimate a model for imputing measured BMI from self-reported BMI. The methodology is described in Section \ref{section:FAM_ABC_impute}.
+The National Health and Nutrition Examination Survey (NHANES) targets a nationally representative sample of approximately 5,000 individuals in each year since 1999. The data collected includes responses to interview questions about demographics, disease conditions, height, and weight, as well as physical measurement of BMI. We use NHANES years 2002 to 2010 to estimate a model for imputing measured BMI from self-reported BMI. The methodology for doing so is described below in Section \ref{section:FAM_ABC_impute}.
 
 \subsubsection{ABC/CARE}
-\noindent FAM uses ABC/CARE data to initialize the state of each ABC/CARE subject when they enter into the simulation.
-These data are taken from the the parental interviews at various subject ages from birth to age 21; age-30 subject interview; and mid-30s biomedical survey.
-The goal is to have each subject's initial state in the simulation match their status at the age-30 subject interview. However, because several key FAM inputs are not available at the age-30 interview, we use PSID or ABC/CARE surveys corresponding to other ages to impute missing elements. These imputations are discussed in Section \ref{section:FAM_ABC_impute}.
+\noindent FAM uses ABC/CARE data to initialize the state of each ABC/CARE subject when they enter the simulation process.
+These data are taken from the the parental interviews at various subject ages from birth to age 21, age-30 subject interview, and mid-30s biomedical survey.
+The goal is to align each subject's initial state in the simulation match with their status at the age-30 subject interview. However, because several key FAM inputs are not available at the age-30 interview, we use PSID or ABC/CARE surveys corresponding to other ages to impute missing elements. These imputations are discussed in Section \ref{section:FAM_ABC_impute}.
 
 \paragraph{Variable Construction and Imputations}
 \label{section:FAM_ABC_impute}
 
 % \todo would be nice to have a table that summarizes imputed variables at age 30, imputation method, and number of missing subjects
 
-\noindent Marital status transitions and childbearing in FAM are affected by the subject's mother's education level. The ABC/CARE age-30 subject interview did not ask about mother's education, but the ABC age-21 parent interview did.
-For ABC subjects, we assume that each subject's mother had the same education level at the age-30 subject interview as what was reported in the age-21 parent interview. For CARE subjects, we impute mother's education from an ordered Probit model using race, ethnicity, education, disease conditions, employment status, presence of a health-related work limitation, and a self-report of whether or not the subject was ``poor'' as a child.  The model is estimated using age 30 to 31 PSID subjects with birth years between 1945 and 1981. Each of the model covariate values are taken from the CARE age 30 interview. At the beginning of each simulation repetition, an education level is randomly drawn from the probability distribution for each CARE subject and assigned to be the mother's education level.
+\noindent Marital status state occupancies and childbearing in FAM are generated in part by the subject mother's education level. The ABC/CARE age-30 subject interview did not ask about mother's education, but the ABC age-21 parent interview did.
+For ABC subjects, we assume that each subject's mother had the same education level at the age-30 subject interview as what was reported in the age-21 parent interview. For CARE subjects, we impute mother's education from an ordered Probit model using race, ethnicity, education, disease conditions, employment status, presence of a health-related work limitation, and a self-report of whether or not the subject was ``poor'' as a child.  The model is estimated using age 30 to 31 PSID subjects with birth years between 1945 and 1981. Each of the model covariate values is taken from the CARE age 30 interview. At the beginning of each individual simulation, an education level is randomly drawn from the probability distribution for each CARE subject and assigned to be the mother's education level.
 
-\noindent Many FAM transition models depend on a three-level measure of parents' economic status when the subject was a child.
+\noindent FAM state-occupancy models depend on a three-level measure of parents' economic status when the subject was a child.
 This is based on the PSID question: ``Were your parents poor when you were growing up, pretty well off, or what?''
 The three possible responses are ``poor,'' ``average''/``it varied'', or ``pretty well off.''
 This question is not included in the ABC/CARE interviews, but because preliminary eligibility for the program focused on children from high-risk backgrounds, based on socioeconomic factors, the value of this variable is set to ``poor'' (when growing up) for all ABC/CARE subjects.
 
-\noindent All FAM transition models depend on demographics of the subject, including whether or not the subject is Hispanic.
+\noindent FAM state-occupancy models depend on demographics of the subject, including whether or not the subject is Hispanic.
 This information is not available in the ABC/CARE data, but it is assumed that none of the ABC/CARE subjects are Hispanic.\footnote{Census data on Hispanics in North Carolina were not available for 1970 and 1980, but Hispanic migration into this state is more recent than in other regions, and as late as 1990, only 2\% of the North Carolina poor were Hispanic \citep{Johnson_2003_Changing-Poverty}.}
 
-\noindent Most FAM models depend on smoking status. Employment status affects FAM transitions in marital status, childbearing, claiming of disability insurance (DI) and supplemental security income (SSI), and type of health insurance.
+\noindent FAM state-occupancy models also depend on smoking status. Employment status affects FAM state occupancies in marital status, childbearing, claiming of disability insurance (DI) and supplemental security income (SSI), and type of health insurance.
 One male in the ABC control group is missing smoking status and, although known to be not working, is also missing specific employment status (unemployed or out of the labor force).
  We use a multinomial logit model to jointly estimate the probability of each combined smoking and employment category among 25- to 35-year-olds in the PSID who were not working. At the beginning of each simulation repetition, we use a Monte Carlo random draw generated from this distribution to assign this subject's smoking and employment statuses. This same subject is also missing information about binge drinking. A separate binary Probit binge drinking model was estimated using the age 25--35 PSID data. A Monte Carlo random draw is taken according the Probit probability to forecast binge drinking behavior at the beginning of the simulation.
 
-\noindent BMI affects FAM transitions in health, functional status, employment, and smoking.
-The FAM transition models are estimated with BMI computed from self-reported height and weight in the PSID.
-The only BMI data in ABC/CARE come from height and weight measured during the health interview. This interview took place at roughly age 30 for CARE subjects, and at age 34 for ABC subjects.
-This poses two challenges.
-First, self-reported BMI can be biased by factors such as actual height and weight, gender, and race.\footnote{\citet{Cawley_2004_JHR}.}
-Second, it is possible that BMI could increase or decrease systematically in the years between the age-30 subject interview and the age-34 health interview.
+\noindent \textbf{[JJH: This problem not well described! What is the problem? We weight and height the people!] [JLG: Correct. Please see the paragraph below as I rewrote it. The two issues are. First, weight and height are self reported in the PSID. Then, BMI is constructed. So there is measurement error. Second, there is a time discrepancy between our observation of BMI in the PSID and in ABC/CARE. We would want a measure at the same age because BMI is an initial condition in most of our models. I rewrote the paragraph.]}
 
-\noindent To address the first BMI imputation challenge, we use a variation on the method of \citet*{Courtemanche_etal_2015_Adjusting-Body-Mass} to impute measured BMI in the PSID.
-While the method in \citet{Courtemanche_etal_2015_Adjusting-Body-Mass} works for importing height and weight, we apply the following specification to directly model BMI. Using respondents aged 30 to 40 in the 2002-2010 NHANES waves, we forecast measured BMI from percentile ranks of self-reported BMI using the model specification in \citet{Courtemanche_etal_2015_Adjusting-Body-Mass}. Three variations
+\noindent BMI is an important determinant of the state occupancies that we model. BMI is a determinants of the diseases that we model as well as functional status, employment, and smoking. There are two issues with the measurement of BMI in the experimental and non-experimental samples. First, weight and height are self reported in the PSID. Then, BMI is constructed. Thus BMI could be measured with error in the PSID. Second, BMI is not measured at the same time across experimental and non-experimental datasets. In the PSID it is measured at age 30. In ABC/CARE it is measured at age 30 for CARE subjects and at age 34 for ABC subjects. BMI could increase or decrease systematically in the years between the age-30 subject interview and the age-34 health interview. In order to estimate state-occupancy models and then forecast using BMI as an initial condition, we solve these issues as described next.
+
+\noindent To address the first issue, we use a variation on the method of \citet*{Courtemanche_etal_2015_Adjusting-Body-Mass} to impute measured BMI in the PSID.
+While the method in \citet{Courtemanche_etal_2015_Adjusting-Body-Mass} works for imputing height and weight, we apply the following specification to directly model BMI. Using respondents aged 30 to 40 in the 2002-2010 NHANES waves, we forecast measured BMI from percentile ranks of self-reported BMI using the model specification in \citet{Courtemanche_etal_2015_Adjusting-Body-Mass}. Three variations
 on the spline interactions of \citet{Courtemanche_etal_2015_Adjusting-Body-Mass} are also considered. After estimating these models using NHANES data, covariate values from the PSID
 age 30--34 data in years 2002--2013 are used to impute measured BMI values for PSID respondents. A Kolmogorov-Sminov (K-S) test and a visual inspection of smoothed histograms are used to compare the distribution of PSID imputed values to the distribution of observed values in the NHANES estimation sample. The model specification used for imputation has the smallest K-S distance between the two distributions.
 
-\noindent After imputing values of measured BMI for PSID respondents age 30--34, we turn to the second problem: accounting for systematic trends in BMI from the age 30 interview to the health interview. The goal is to have a model that maps from measured BMI at the health interview around age 34 to self-reported BMI at the age 30 interview. Employing the longitudinal structure of PSID, we match each respondent's first interview between age 30--32 with their imputed measured BMI between ages 33--40. We then estimate a model using self-reported BMI between ages 30--32 as the response variable and imputed measured BMI at ages 33--40, the age when BMI is actually measured, along with other variables observed at age 30 as explanatory variables. This imputation model is applied to any ABC/CARE subject who has their health interview at least one year after their age 30 interview.
+\noindent After imputing values of measured BMI for PSID respondents age 30--34, we turn to the second issue: accounting for systematic trends in BMI from the age 30 interview to the health interview. The goal is to have a model that maps from measured BMI at the health interview around age 34 to self-reported BMI at the age 30 interview. Employing the longitudinal structure of PSID, we match each respondent's first interview between age 30--32 with their imputed measured BMI between ages 33--40. We then estimate a model using self-reported BMI between ages 30--32 as the response variable and imputed measured BMI at ages 33--40, the age when BMI is actually measured, along with other variables observed at age 30 as explanatory variables. This imputation model is applied to any ABC/CARE subject who has their health interview at least one year after their age 30 interview.
 
-\noindent For ABC/CARE subjects who have their health interview within one year of the age 30 interview, we assume that any systematic time trends in BMI are too small to have any practical significance. However, we still need to convert the imputed measured BMI to a self-reported value for compatibility with other transition models estimated in PSID. This model is estimated on ages 30--32 in the PSID and uses covariates from the age 30 interview along with imputed measured BMI to forecast self-reported BMI.
+\noindent For ABC/CARE subjects who have their health interview within one year of the age 30 interview, we assume that any systematic time trends in BMI are too small to have any practical significance. However, we still need to convert the imputed measured BMI to a self-reported value for compatibility with other state-occupancy models estimated using PSID data. This model is estimated on ages 30--32 in the PSID and uses covariates from the age 30 interview along with imputed measured BMI to forecast self-reported BMI.
 
 \noindent At the beginning of each simulation repetition, we choose the appropriate model to impute self-reported BMI for each ABC/CARE subject based on the time between their age 30 interview and their health interview. Their expected BMI is estimated from this model. A Monte Carlo Normal random draw is generated using the subject's expected BMI and the estimated variance from the model. This Monte Carlo draw is then assigned to be the subject's initial self-reported BMI in the simulation. Using BMI from the health interview limits the ABC/CARE subjects simulated in FAM to only those who have height and weight measurements in the health interview.
 
 \noindent Subjects' health insurance coverage affects their medical costs.
 FAM uses three categories of health insurance: none, public only, and some private.
 Five ABC subjects and three CARE subjects were missing health insurance status.
-Three cases were logically imputed by assuming that subjects have no health insurance if they do not know their insurance status and either go to an emergency room or community health clinic or do not go anywhere when they need health care.
+Three cases were imputed by assuming that subjects have no health insurance if they do not know their insurance status and either go to an emergency room or community health clinic or do not go anywhere when they need health care.
 In order to impute the insurance category for the remaining five cases, we use age 25--35 PSID data to estimate a Probit model for whether or not a subject had insurance.
-The predictors were gender, earnings, marital status, self-reported health, employment status, and whether or not the subject had any biological children.
+The predictors are gender, earnings, marital status, self-reported health, employment status, and whether or not the subject had any biological children.
 We use this model to compute the probability of having insurance at the start of the simulation (at the age-30 interview).
 Then, we generate a Monte Carlo binary random variate according to this probability.
 If the outcome is positive, the subject is assigned to have some private insurance.
 
 \noindent FAM uses six Activities of Daily Living (ADLs) about which there is data in PSID: walking, dressing, eating, bathing or showering, getting in and out of bed or a chair, and using the toilet, including getting to the toilet.
 FAM simulates the number of these ADLs in which the subject has difficulty.
-ADL difficulties forecast FAM transitions in benefits claiming, mortality, employment status, insurance category, and nursing home residency.
-FAM also transitions the count of difficulties among six Instrumental Activities of Daily Living (IADLs) from PSID: preparing one's own meals; shopping for personal toilet items or medicines; managing one's own money, such as keeping track of expenses or paying bills; using the phone; doing heavy housework, like scrubbing floors or washing windows; and doing light housework, like doing dishes, straightening up, or light housecleaning.
+ADL difficulties forecast FAM state occupancies in benefits claiming, mortality, employment status, insurance category, and nursing home residency.
+FAM also models the count of difficulties among six Instrumental Activities of Daily Living (IADLs) from PSID: preparing one's own meals; shopping for personal toilet items or medicines; managing one's own money, such as keeping track of expenses or paying bills; using the phone; doing heavy housework, like scrubbing floors or washing windows; and doing light housework, like doing dishes, straightening up, or light housecleaning.
 Both ADLs and IADLs are components of FAM's model for quality-adjusted life years (QALYs).
 The ABC/CARE age-30 subject interview does not ask about ADLs or IADLs, but it does ask if the subject has a physical or nervous condition that keeps them from working.
 PSID respondents are also asked this question.
 We create an imputation model for each of these two measures using an ordered Probit model estimated on PSID respondents aged 25 to 35.
 We use these models to compute the probabilities for each number of ADLs and IADLs. To start the simulation, we generate Monte Carlo random draws according to these probabilities and use them to assign the corresponding counts.
 
-\noindent When a subject claims DI benefits, it affects their FAM transitions in employment status, insurance category, and Medicare enrollment.
+\noindent When a subject claims DI benefits, it affects their employment status, insurance category, and Medicare enrollment.
 DI claiming also affects medical costs.
-SSI claiming affects FAM transitions in employment status.
-Lastly, claiming Social Security retirement benefits affects FAM transitions in employment status and insurance category.
+SSI claiming affects FAM employment status.
+Lastly, claiming Social Security retirement benefits affects employment status and insurance category.
 The ABC age-30 subject interview has a single yes/no question about claiming which asks: ``Currently are you receiving income from workman's compensation, disability, or Social Security benefits including Supplemental Security Income?'' CARE asks a similar question. The PSID has separate questions for each benefit type. We use a multinomial logit model to estimate the joint probability of each combination of DI and SSI claiming. The estimation uses PSID respondents aged 25 to 35 who were claiming at least one of the following benefits: workman's compensation, DI, or SSI. A Monte Carlo random draw generated from this distribution is used to assign each ABC/CARE subject's DI- and SSI-claiming status at the start of the simulation. One ABC subject is missing data about whether or not they were claiming and was assumed to not be claiming any benefits.
 
-\noindent As discussed in Section \ref{section:qalys}, FAM uses different models to estimate medical costs depending on whether or not a subject is Medicare-eligible. Subjects can enroll in Medicare before the age of 65 if they are claiming DI. The cost estimates for Medicare-eligible subjects depend on the subjects' current disease status at the age-30 interview and their disease status two years prior to the interview. Unfortunately, ABC/CARE does not have disease data two years before the age-30 interview. It is assumed that all subjects do not have their disease conditions in the previous period.
+\noindent As discussed in Section \ref{section:qalys}, FAM uses different models to estimate medical costs depending on whether or not a subject is Medicare-eligible. Subjects can enroll in Medicare before the age of 65 if they are claiming DI. The cost estimates for Medicare-eligible subjects depend on the subjects' current disease status at the age-30 interview and their disease status two years prior to the interview. Unfortunately, ABC/CARE does not have disease data two years before the age-30 interview. We initialize the process assuming that all subjects do not have their disease conditions in the previous period.
 
 
 
