anna edited jorge's edits 7/21

--- a/Appendices/Health/data.tex
+++ b/Appendices/Health/data.tex
@@ -90,7 +90,7 @@ One male in the ABC control group is missing smoking status and, although known 
 
 \noindent \textbf{[JJH: This problem not well described! What is the problem? We weight and height the people!] [JLG: Correct. Please see the paragraph below as I rewrote it. The two issues are. First, weight and height are self reported in the PSID. Then, BMI is constructed. So there is measurement error. Second, there is a time discrepancy between our observation of BMI in the PSID and in ABC/CARE. We would want a measure at the same age because BMI is an initial condition in most of our models. I rewrote the paragraph.]}
 
-\noindent BMI is an important determinant of the state occupancies that we model. BMI is a determinants of the diseases that we model as well as functional status, employment, and smoking. There are two issues with the measurement of BMI in the experimental and non-experimental samples. First, weight and height are self reported in the PSID. Then, BMI is constructed. Thus BMI could be measured with error in the PSID. Second, BMI is not measured at the same time across experimental and non-experimental datasets. In the PSID it is measured at age 30. In ABC/CARE it is measured at age 30 for CARE subjects and at age 34 for ABC subjects. BMI could increase or decrease systematically in the years between the age-30 subject interview and the age-34 health interview. In order to estimate state-occupancy models and then forecast using BMI as an initial condition, we solve these issues as described next.
+\noindent BMI is an important determinant of the state occupancies that we model. BMI is a determinant of the diseases that we model as well as functional status, employment, and smoking. There are two issues with the measurement of BMI in the experimental and non-experimental samples. First, weight and height are self reported in the PSID. Then, BMI is constructed. Thus BMI could be measured with error in the PSID. Second, BMI is not measured at the same time across experimental and non-experimental datasets. In the PSID it is measured at age 30. In ABC/CARE it is measured at age 30 for CARE subjects and at age 34 for ABC subjects. BMI could increase or decrease systematically in the years between the age-30 subject interview and the age-34 health interview. In order to estimate state-occupancy models and then forecast using BMI as an initial condition, we solve these issues as described next.
 
 \noindent To address the first issue, we use a variation on the method of \citet*{Courtemanche_etal_2015_Adjusting-Body-Mass} to impute measured BMI in the PSID.
 While the method in \citet{Courtemanche_etal_2015_Adjusting-Body-Mass} works for imputing height and weight, we apply the following specification to directly model BMI. Using respondents aged 30 to 40 in the 2002-2010 NHANES waves, we forecast measured BMI from percentile ranks of self-reported BMI using the model specification in \citet{Courtemanche_etal_2015_Adjusting-Body-Mass}. Three variations
