finish off health and clarify confusion in C

--- a/Appendices/Health/method_analysis.tex
+++ b/Appendices/Health/method_analysis.tex
@@ -357,7 +357,7 @@ Working, if working age & $\times$ & $\times$ & \checkmark & \checkmark \\
 
 \begin{eqnarray}
 I_{a,m} &=&  \bm{\mathit{1}} \left( \tilde{\bm{D}}_{0} \geq 0 \right) \bm{\Omega}_{m} + \bm{\mathit{1}} \left( \tilde{\bm{D}}_{a-1} \geq 0\right) \bm{\Lambda}_{m}  + \left( \tilde{\bm{D}}_{a-2} \geq 0\right) \tilde{\bm{\Lambda}}_{m} \nonumber \\
-&+& \bm{W_a} \bm{\beta}_{m} + \bm{B} \bm{\alpha}_m + \tau(a)_m + \varepsilon_{a,m}. \label{eq:trans1}
+&+& \bm{W_a} \bm{\beta}_{m} + \bm{B} \bm{\alpha}_m + \tau_{a,m} + \varepsilon_{a,m}. \label{eq:trans1}
 \end{eqnarray}
 
 We use a likelihood ratio test to test the null hypothesis $H_0: \tilde{\bm{\Lambda}}_{m} = \bm{0}$ in Equation~\eqref{eq:trans1}. Table~\ref{table:lrtests} show the results from these tests. For the health states considered, we do not reject the null hypothesis.
