--- a/Appendices/Methodology_Alt.tex
+++ b/Appendices/Methodology_Alt.tex
@@ -272,29 +272,7 @@ For individual $i$ in experimental sample ($k=e$), an individual $l(i)$ in the a
 
 \noindent And, second, we can use the profiles of the individual(s) in the auxiliary samples as the profiles of the individual $i$ in the experimental sample. This is a non-parametric, one-step strategy: instead of fitting a dynamic relationship in the non-experimental sample and using it to form out-of-sample forecasts, we construct a synthetic cohort and estimate dynamic relationships to impute labor income profiles.
 
-\noindent Table~\ref{table:nvpli} compares the results from the approach we use throughout the main text and the non-parametric approach that we introduce in this section. We present results for labor income. We use pre- and post-treatment variables to match (using the same variables as the main approach of Appendix~\ref{appendix:match}). We present the discounted net present value (treatment - control) for labor income in 2014 dollars. The approaches are in close agreement.\\
-
-\begin{table}[H]
-\begin{threeparttable}
-\caption{Net Present Value of Labor Income: Parametric and Non-Parametric Approaches}
-\label{table:nvpli}
-\centering
-\begin{tabular}{ccc} \toprule
-\multicolumn{3}{c}{Labor Income} \\
-Pooled & Male & Female \\ \midrule
-\multicolumn{3}{c}{\textbf{a. Parametric (Main Paper)}} \\
-133,032 & 238,105 & 41,908 \\
-(76,634) & (185,375) & (24,606) \\
-\multicolumn{3}{c}{\textbf{b. Non-Parametric (This Section)}} \\
-132,924 & 195,530 & 69,317 \\
-(11,253) & (20,210) & (4,350) \\ \bottomrule
-\end{tabular}
-\begin{tablenotes}
-\footnotesize
-\item Note: This table compares the net-present value of labor income (treatment - control) using the parametric approach of the main text and the approach that we use in this section. All values are discounted to birth and reported in 2014 dollars.
-\end{tablenotes}
-\end{threeparttable}
-\end{table}
+\noindent Table~\ref{table:predsens} compares the results from the approach we use throughout the main text and the non-parametric approach that we introduce in this section. We present results for labor income. We use pre- and post-treatment variables to match (using the same variables as the main approach of Appendix~\ref{appendix:match}). We present the discounted net present value (treatment - control) for labor income in 2014 dollars. The approaches are in close agreement.
 
 \subsubsection{Testing Assumption~\ref{ass:contain}: Support Conditions}\label{app:containsupport}
 
@@ -723,14 +701,16 @@ In the auxiliary samples, we observe outcomes $Y_{n,a}$ for $a \in [a^*, \ldots,
 \begin{sidewaystable}[H]
 \resizebox{\columnwidth}{!}{%
 \begin{threeparttable}
-\caption{Net Present Value of Labor Income and Cost/Benefit Analysis Under Different Specifications for Labor Income Forecasts}
+\caption{Net Present Value of Labor Income and Benefit/Cost Analysis Under Different Specifications for Labor Income Forecasts}
 \label{table:predsens}
 \centering
 \footnotesize
 \input{output/alternative_specifications}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table displays the net present value of labor income in 2014 USD (treatment - control) using the five different specifications for forecasting that are explained below. Specification 1 is our baseline estimate. It also presents the calculation of the internal rate of return and the benefit/cost ratio of the program using these different net present values. Specification 1: forecast based on lagged outcome; no serial autocorrelation; and no fixed effect. Specification 2: forecast based on lagged outcome; arbitrary serial autocorrelation; and no fixed effect. Specification 3: forecast based on lagged outcome; first-order serial autocorrelation; and no fixed effects. Specification 4: forecast based on lagged outcome; no serial autocorrelation; and fixed effect.
+\item Note: This table displays the net present value of labor income in 2014 USD (treatment - control) using the five different specifications for forecasting that are explained below. Specification 1 is our baseline estimate. It also presents the calculation of the internal rate of return and the benefit/cost ratio of the program using these different net present values. Specification 1: forecast based on lagged outcome; no serial autocorrelation; and no fixed effect. Specification 2: forecast based on lagged outcome; arbitrary serial autocorrelation; and no fixed effect. Specification 3: forecast based on lagged outcome; first-order serial autocorrelation; and no fixed effects. Specification 4: forecast based on lagged outcome; no serial autocorrelation; and fixed effect.\\
+\item \\
+\item \textbf{[JLG: Please revisit this table. Specification 1 was obviously outdated and that's why it jumped out to you as very different from the rest of the specifications. We seem to have some decent consistency across the board but, more importantly, between Specification 1 and 5 (nonparametric).]}
 \end{tablenotes}
 \end{threeparttable}
 }
