--- a/Appendices/Methodology_Alt.tex
+++ b/Appendices/Methodology_Alt.tex
@@ -272,7 +272,7 @@ For individual $i$ in experimental sample ($k=e$), an individual $l(i)$ in the a
 
 \noindent And, second, we can use the profiles of the individual(s) in the auxiliary samples as the profiles of the individual $i$ in the experimental sample. This is a non-parametric, one-step strategy: instead of fitting a dynamic relationship in the non-experimental sample and using it to form out-of-sample forecasts, we construct a synthetic cohort and estimate dynamic relationships to impute labor income profiles.
 
-\noindent Table~\ref{table:predsens} compares the results from the approach we use throughout the main text and the non-parametric approach that we introduce in this section. We present results for labor income. We use pre- and post-treatment variables to match (using the same variables as the main approach of Appendix~\ref{appendix:match}). We present the discounted net present value (treatment - control) for labor income in 2014 dollars. The approaches are in close agreement.
+\noindent Table~\ref{table:predsens} compares the results from the approach we use throughout the main text and the non-parametric approach that we introduce in this section. We present results for labor income. We use pre- and post-treatment variables to match (using the same variables as the main approach of Appendix~\ref{appendix:match}). We present the discounted net present value (treatment - control) for labor income in 2014 dollars, together with the internal rates of return and benefit-cost ratios associated to these net present values. Table~\ref{table:predsens} also presents results from other specifications that we discuss below in Appendix~\ref{appendix:predsensitivity}. The approaches are in close agreement.
 
 \subsubsection{Testing Assumption~\ref{ass:contain}: Support Conditions}\label{app:containsupport}
 
@@ -778,7 +778,7 @@ A sufficient condition for the validity of this procedure is Assumption~\ref{ass
 \item Compute the standard error as the sample standard deviation of the 100*100 re-samples. Compute the $p$-value's as the proportion of times that we reject the null hypothesis, after centering the empirical bootstrap distribution according to the null hypothesis.
 \end{enumerate}
 
-\noindent \textbf{[JJH: What about standard errors for the second -nonparametric- matching procedure?] [JLG: It comes next. We add back the the parametric residuals. I think that we could do better; but also believe that this is valid. We are estimating the conditional mean function with non-parametrically and the residual parametrically. This makes the computation really simple.] [JJH: But can we check the other way? How much difference does it make?] [JLG: Yes. Let us clear G and this won't take more than a morning.]}
+\noindent \textbf{[JJH: What about standard errors for the second -nonparametric- matching procedure?] [JLG: It comes next. We add back the the parametric residuals. I think that we could do better; but also believe that this is valid. We are estimating the conditional mean function non-parametrically and the residual parametrically. This makes the computation really simple.] [JJH: But can we check the other way? How much difference does it make?] [JLG: Yes. Let us clear G and this won't take more than a morning.] [JJH: OK - Let's move on!] [JLG: Here are the net present values (gain in terms of labor income). Parametric strategy:  pooled 133,032 (s.e.\ 76,634); males 238,256 (s.e.\ 185,375); females 41,908 (s.e.\ 24,606). Non-parametric forecast with parametric adjustment for forecasting error:  pooled 132,924 (s.e.\ 11,253); males 195,530 (s.e.\ 20,210); females 69,317 (s.e.\ 4,350). Non-parametric forecast with non-parametric adjustment for forecasting error: pooled 137,133 (s.e.\ 19,989); males 204,256 (s.e.\ 32,212); females 64,522 (s.e.\ 9,987). The difference between the last two is really trivial, and given that that is what's in right now I would advocate for this to be good for our mental health but not to include it. It's really your call, though. It would take me a bit to run the computations to report the IRRs and B/Cs for completing Table C.12 because then I need to re-run the whole thing instead of only producing the NPVs associated to labor income and at the end the different in IRRs and B/Cs with the decimals that we report would probably be practically zero.]}
 
 \subsubsection{Inference for Non-Parametric Forecasts}
 
@@ -792,7 +792,7 @@ A sufficient condition for the validity of this procedure is Assumption~\ref{ass
 
 \item Perform the matching procedure to construct the synthetic cohort, estimate the dynamic relationship and impute the profiles by matching on baseline variables and on variables affected by treatment as explained in Appendix~\ref{appendix:nonpar}. Store the predictions at all ages for individual $i$ in this sample in a vector $\mathcal{\tilde{Y}}_{i,e,s}$, where $\mathcal{\tilde{Y}}_{i,e,s}$ is the vector of forecasts for individual $i$ in the experimental bootstrap sample $s$.
 
-\item Compute the residuals in in step 7 of Appendix~\ref{appendix:bootstrapspreds}.
+\item Compute the residuals in step 7 of Appendix~\ref{appendix:bootstrapspreds}.
 
 \item Randomly pair individual $i$ in sample $(e,s)$ with individual $j$ in sample $(n,s')$. This random pairing is stratified by the variables $\bm{B}_k$ and $\bm{X}_{k,a}^d$ defined in the paper. The forecast accounting for forecasting error is $\mathcal{\tilde{Y}}_{i,e,s}+ \bm{\mathcal{E}}_{j,e,s'}$.
 
