--- a/Appendices/Methodology_Alt.tex
+++ b/Appendices/Methodology_Alt.tex
@@ -1,6 +1,6 @@
 \section{Identification and Estimation of Life-Cycle Treatment Effects} \label{appendix:methodology}
 
-This appendix presents our approach to identify and estimate life-cycle treatment effects. Differences in the approach for each outcome are based on different scenarios of data availability. We proceed as follows. Appendix~\ref{app:method_fullobs} focuses on outcomes that are essentially fully observed over the course of the experiment with little attrition. Appendix~\ref{app:method_partialobs} focuses on outcomes that are partially observed over the course of the experiment with a substantial rate of attrition. Appendix~\ref{app:method_noobs}  focuses on outcomes that we do not observe, and thus need to forecast out of sample. Appendices~\ref{app:method_irr} and ~\ref{app:method_cbratio} provide some technical details on the computations of the internal rate of return and the benefit/cost ratios, respectively. Finally, Appendix~\ref{appendix:bootstrap} provides the precise steps for constructing our statistical inference.
+This appendix presents our approach for identifying and estimating life-cycle treatment effects. Differences in the approach used for each outcome are based on different scenarios of data availability. We proceed as follows. Appendix~\ref{app:method_fullobs} focuses on outcomes that are fully observed over the course of the experiment with little attrition. Appendix~\ref{app:method_partialobs} focuses on outcomes that are partially observed over the course of the experiment with substantial rates of attrition. Appendix~\ref{app:method_noobs}  focuses on outcomes that we do not observe, and thus need to forecast out of sample. Appendices~\ref{app:method_irr} and ~\ref{app:method_cbratio} provide technical details on the computations of the internal rate of return and the benefit/cost ratios, respectively. Appendix~\ref{appendix:bootstrap} provides the steps for constructing our statistical inference. Finally, Appendix~\ref{appendix:results} describes our procedure for selecting the background variables that we condition on.
 
 \subsection{Complete Data}\label{app:method_fullobs}
 
@@ -778,8 +778,6 @@ A sufficient condition for the validity of this procedure is Assumption~\ref{ass
 \item Compute the standard error as the sample standard deviation of the 100*100 re-samples. Compute the $p$-value's as the proportion of times that we reject the null hypothesis, after centering the empirical bootstrap distribution according to the null hypothesis.
 \end{enumerate}
 
-\noindent \textbf{[JJH: What about standard errors for the second -nonparametric- matching procedure?] [JLG: It comes next. We add back the the parametric residuals. I think that we could do better; but also believe that this is valid. We are estimating the conditional mean function non-parametrically and the residual parametrically. This makes the computation really simple.] [JJH: But can we check the other way? How much difference does it make?] [JLG: Yes. Let us clear G and this won't take more than a morning.] [JJH: OK - Let's move on!] [JLG: Here are the net present values (gain in terms of labor income). Parametric strategy:  pooled 133,032 (s.e.\ 76,634); males 238,256 (s.e.\ 185,375); females 41,908 (s.e.\ 24,606). Non-parametric forecast with parametric adjustment for forecasting error:  pooled 132,924 (s.e.\ 11,253); males 195,530 (s.e.\ 20,210); females 69,317 (s.e.\ 4,350). Non-parametric forecast with non-parametric adjustment for forecasting error: pooled 137,133 (s.e.\ 19,989); males 204,256 (s.e.\ 32,212); females 64,522 (s.e.\ 9,987). The difference between the last two is really trivial, and given that that is what's in right now I would advocate for this to be good for our mental health but not to include it. It's really your call, though. It would take me a bit to run the computations to report the IRRs and B/Cs for completing Table C.12 because then I need to re-run the whole thing instead of only producing the NPVs associated to labor income and at the end the different in IRRs and B/Cs with the decimals that we report would probably be practically zero.]}
-
 \subsubsection{Inference for Non-Parametric Forecasts}
 
 
@@ -792,7 +790,7 @@ A sufficient condition for the validity of this procedure is Assumption~\ref{ass
 
 \item Perform the matching procedure to construct the synthetic cohort, estimate the dynamic relationship and impute the profiles by matching on baseline variables and on variables affected by treatment as explained in Appendix~\ref{appendix:nonpar}. Store the predictions at all ages for individual $i$ in this sample in a vector $\mathcal{\tilde{Y}}_{i,e,s}$, where $\mathcal{\tilde{Y}}_{i,e,s}$ is the vector of forecasts for individual $i$ in the experimental bootstrap sample $s$.
 
-\item Compute the residuals in step 7 of Appendix~\ref{appendix:bootstrapspreds}.
+\item Compute the residuals in step 7 of Appendix~\ref{appendix:bootstrapspreds}.\footnote{When we compute the residuals using the fully nonparametric model we get the following net present value for labor income: pooled (males and females) 137,133 (s.e.\ 19,989); males 204,256 (s.e.\ 32,212); females 64,522 (s.e.\ 9,987). Table~\ref{table:predsens} shows that these results are closely aligned to the two approaches reported in the paper.}
 
 \item Randomly pair individual $i$ in sample $(e,s)$ with individual $j$ in sample $(n,s')$. This random pairing is stratified by the variables $\bm{B}_k$ and $\bm{X}_{k,a}^d$ defined in the paper. The forecast accounting for forecasting error is $\mathcal{\tilde{Y}}_{i,e,s}+ \bm{\mathcal{E}}_{j,e,s'}$.
 
