all sunday edits in

--- a/heckman.bib
+++ b/heckman.bib
@@ -1,6 +1,12 @@
 % This file was created with JabRef 2.10.
 % Encoding: Cp1252
 
+@book{train2009discrete,
+  title={Discrete choice methods with simulation},
+  author={Train, Kenneth E},
+  year={2009},
+  publisher={Cambridge university press}
+}
 
 @TechReport{dHaultfoeuille_CompCondition,
   Title                    = {On the Completeness Condition in Nonparametric Instrumental Problems},
