last correction before sending to heckman

--- a/Appendices/Health/method_analysis.tex
+++ b/Appendices/Health/method_analysis.tex
@@ -379,7 +379,7 @@ Stroke              & 3.94 & 4 & 0.14 \\
 
 \noindent An alternative test for a first-order Markov process is based on the following version of a Lagrange multiplier test: (i) use a linear probability model approximation to a first-order Markov process and the variables in Tables~\ref{table:supertab1} to ~\ref{table:supertab3} for each outcome of interest; (ii) calculate the correlation of the residuals with higher order lagged variables. Tables~\ref{table:1storderresidsheart} to \ref{table:1storderresidstroke} show these correlations. The results of these tests strongly support a first-order Markov assumption.
 
-\noindent To illustrate how to read these tests consider Table~\ref{table:1storderresidsheart}. This table reports simple first-order Pearson correlations with the indicated variable. The row presents the residuals from forecasting heart disease at age $a$ using different orders of lags. The estimated correlations are small---and jointly statistically insignificant.\footnote{To perform the joint test, we proceed as follows. Let $\hat{D}_{a,m}$ be the residual of the linear-probability approximation of Equation~\eqref{eq:trans}. For each disease in Tables~\ref{table:1storderresidsheart} to~\ref{table:1storderresidstroke}, we regress $\hat{D}_{a,m}$ on the diseases listed in each table's columns. Let $\Xi_m$ denote the coefficients of this regression. We use an $F$-test to test the null hypothesis $H_0: \Xi_m = \bm{0}$. The $p$-values associated with  the $F$-test for Tables~\ref{table:1storderresidsheart} to~\ref{table:1storderresidstroke} are $< .0000$ in the three cases.}
+\noindent To illustrate how to read these tests consider Table~\ref{table:1storderresidsheart}. This table reports simple first-order Pearson correlations with the indicated variable. The row presents the residuals from forecasting heart disease at age $a$ using different orders of lags. The estimated correlations are small---and jointly statistically insignificant.\footnote{To perform the joint test, we proceed as follows. Let $\hat{D}_{a,m}$ be the residual of the linear-probability approximation of Equation~\eqref{eq:trans}. For each disease in Tables~\ref{table:1storderresidsheart} to~\ref{table:1storderresidstroke}, we regress $\hat{D}_{a,m}$ on the diseases listed in each table's columns. Let $\bm{\Xi}_m$ denote the coefficients of this regression. We use an $F$-test to test the null hypothesis $H_0: \bm{\Xi}_m = \bm{0}$. The $p$-values associated with  the $F$-test for Tables~\ref{table:1storderresidsheart} to~\ref{table:1storderresidstroke} are $>0.85$ in the three cases.}
 
 \noindent \textbf{[JJH: Joint test?] [JLG: Computed and now reported in footnote 115]}
 
